{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 195,
  "lineage": "f912c062-f7f0-4e98-025b-596e1cd2dd38",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009447eeccb6f38ad",
            "arn": "arn:aws:ec2:us-east-2:042236406240:instance/i-01da109e86c84d8c8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01da109e86c84d8c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "p001-testing-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed78c0bc9a0b34dc",
            "private_dns": "ip-10-0-1-5.us-east-2.compute.internal",
            "private_ip": "10.0.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0146f735ed57522cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057e0932873b2b66b",
            "tags": {
              "Name": "EC2-p001-threetier-testing-ec2-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c28017693f08473",
              "sg-079381a67272ce31c"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.template_file.init",
            "module.vpc.aws_security_group.allow_http_anywhere",
            "module.vpc.aws_security_group.allow_ssh_anywhere",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09c3d3d837c239517",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-221-105-237.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.105.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:internet-gateway/igw-0297b395e53cbf24d",
            "id": "igw-0297b395e53cbf24d",
            "owner_id": "042236406240",
            "tags": {
              "Name": "Modulo-VPC-p001-gw"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c3d3d837c239517",
            "id": "nat-05f7c8540ed125cbf",
            "network_interface_id": "eni-05723f034e7bdd53d",
            "private_ip": "10.0.2.28",
            "public_ip": "18.221.105.237",
            "subnet_id": "subnet-0f6467f009c3b36aa",
            "tags": {
              "Name": "Modulo-VPC-p001-gw-NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:network-acl/acl-04ed2873662f9c488",
            "egress": [],
            "id": "acl-04ed2873662f9c488",
            "ingress": [],
            "owner_id": "042236406240",
            "subnet_ids": [
              "subnet-0f6467f009c3b36aa"
            ],
            "tags": {
              "Name": "Modulo-VPC-p001-acl-private"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:network-acl/acl-002c4b014498914d3",
            "egress": [],
            "id": "acl-002c4b014498914d3",
            "ingress": [],
            "owner_id": "042236406240",
            "subnet_ids": [
              "subnet-0e75cafe50e9ab2a2"
            ],
            "tags": {
              "Name": "Modulo-VPC-p001-protected-acl"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:network-acl/acl-049a38414358b9b79",
            "egress": [],
            "id": "acl-049a38414358b9b79",
            "ingress": [],
            "owner_id": "042236406240",
            "subnet_ids": [
              "subnet-057e0932873b2b66b"
            ],
            "tags": {
              "Name": "Modulo-VPC-p001-acl-public"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_private_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3136073034",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04ed2873662f9c488",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_private_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3668973569",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04ed2873662f9c488",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_private_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1736078543",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04ed2873662f9c488",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2000190976",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002c4b014498914d3",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-829815916",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-049a38414358b9b79",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1361660199",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-049a38414358b9b79",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3974309353",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-049a38414358b9b79",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-475221066",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04ed2873662f9c488",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3560245280",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002c4b014498914d3",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4158569531",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-049a38414358b9b79",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0297b395e53cbf24d",
            "id": "r-rtb-0c9cd739056adae3a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9cd739056adae3a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00dd77af787c0c053",
            "owner_id": "042236406240",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Modulo-VPC-p001-private-rt"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-015423c879542a41d",
            "owner_id": "042236406240",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Modulo-VPC-p001-protected-rt"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c9cd739056adae3a",
            "owner_id": "042236406240",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Modulo-VPC-p001-public-rt"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c00d11eaea633b3",
            "route_table_id": "rtb-00dd77af787c0c053",
            "subnet_id": "subnet-0f6467f009c3b36aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048e70b83da316457",
            "route_table_id": "rtb-015423c879542a41d",
            "subnet_id": "subnet-0e75cafe50e9ab2a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08950ae654b8d0554",
            "route_table_id": "rtb-0c9cd739056adae3a",
            "subnet_id": "subnet-057e0932873b2b66b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-04c28017693f08473",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c28017693f08473",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Modulo-VPC-p001-allow_http_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Modulo-VPC-p001-allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-079381a67272ce31c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079381a67272ce31c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Modulo-VPC-p001-allow_ssh_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Modulo-VPC-p001-allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-0f6467f009c3b36aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f6467f009c3b36aa",
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "Modulo-VPC-p001-private-subnet"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-0e75cafe50e9ab2a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e75cafe50e9ab2a2",
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "Modulo-VPC-p001-protected-subnet"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-057e0932873b2b66b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-057e0932873b2b66b",
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "Modulo-VPC-p001-public-subnet"
            },
            "vpc_id": "vpc-0e7dcc21727ebde16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:vpc/vpc-0e7dcc21727ebde16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0353465dd278621c3",
            "default_route_table_id": "rtb-0ccbf6740812a4c2d",
            "default_security_group_id": "sg-0cd4053c3ac407b9e",
            "dhcp_options_id": "dopt-447f872f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e7dcc21727ebde16",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ccbf6740812a4c2d",
            "owner_id": "042236406240",
            "tags": {
              "Environment": "testing",
              "Name": "Modulo-VPC-p001-vpc"
            }
          }
        }
      ]
    }
  ]
}